# llm_search

./: .gitignore  README.md  dfs.sh  enviroment.yml  log.txt  parser.py  pyproject.toml  run.py
experiments/20250313_160310/: results.csv
src/: models.py  solver.py  state.py  state_evaluator.py  successor_generator.py
src/llm_search/: goal_checker.py  models.py  register.py  solver.py  state.py  state_evaluator.py  successor_generator.py
src/llm_search/environments/: environment.py  environments.py
src/llm_search/environments/game24/: environment.py  game24-environment.py
src/llm_search/environments/math/: environment.py  math-environment.py
