[project]
name = "llm_search"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Chitolina",email = "68135699+MarcoChit0@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "transformers",
    "torch",
    "torchvision",
    "torchaudio",
    "accelerate",
    "google-genai",
    "tiktoken",
    "bitsandbytes"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["src"]